--- a/gh-mdfile.html
+++ b/gh-mdfile.html
@@ -35,10 +35,25 @@
   <div id="file-content">Loading...</div>
 
   <script>
-	const markdownContent = ql_read_markdown('README.md');
-	
-	document.getElementById('file-content').textContent = markdownContent;
+	fetch(path) 
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('Network response was not ok ' + response.statusText);
+        }
+        return response.text(); // Parse the response as text
+      })
+      .then(data => {
+        document.getElementById('file-content').textContent = data;
+		return data;
+      })
+      .catch(error => {
+        console.error('There was a problem with the fetch operation:', error);
+        document.getElementById('file-content').textContent = 'Error loading file.';
+		return 'Error loading file.';
+      });
+	  
   </script>
 </body>
 </html>
+
 
