--- a/gh-mdfile.html
+++ b/gh-mdfile.html
@@ -40,21 +40,22 @@
         if (!response.ok) {
           throw new Error('Network response was not ok ' + response.statusText);
         }
-        return response.text(); // Parse the response as text
+        //return response.text(); // Parse the response as text
       })
       .then(data => {
         document.getElementById('file-content').textContent = data;
-		return data;
+		//return data;
       })
       .catch(error => {
         console.error('There was a problem with the fetch operation:', error);
         document.getElementById('file-content').textContent = 'Error loading file.';
-		return 'Error loading file.';
+		//return 'Error loading file.';
       });
 	  
   </script>
 </body>
 </html>
+
 
 
 
