--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     async function loadFile() {
       try {
-        const response = await fetch('example.txt'); // Replace with your actual file path
+        const response = await fetch('README.md'); // Replace with your actual file path
         if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
         const text = await response.text();
         document.getElementById('output').textContent = text;
@@ -27,3 +27,4 @@
   </script>
 </body>
 </html>
+
