--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         document.getElementById('output').textContent = 'Error loading file: ' + error.message;
       }
     }
+
+   loadFile(); 
   </script>
 </body>
 </html>
+
 
