--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     body { font-family: Arial, sans-serif; padding: 20px; }
     #output { white-space: pre-wrap; background: #f4f4f4; padding: 10px; border: 1px solid #ccc; }
   </style>
+
+   <script>
+    async function ql_loadFile(md_path) {
+      try {
+        const response = await fetch(md_path); 
+        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+        const text = await response.text();
+        //document.getElementById('output').textContent = text;
+        return text;
+      } catch (error) {
+        //document.getElementById('output').textContent = 'Error loading file: ' + error.message;
+        return "XCP";
+      }
+    }
+   </script>
+     
 </head>
 <body>
   <h2>Server File Viewer</h2>
@@ -25,9 +41,11 @@
       }
     }
 
-   loadFile(); 
+   //loadFile(); 
+   document.getElementById('output').textContent = ql_loadFile('README.md')
   </script>
 </body>
 </html>
+
 
 
