--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
 <body>
   <h2>Server File Viewer</h2>
   
-  <div id="output">Click the button to load content...</div>
+  <div id="markdownOut">Click the button to load content...</div>
 
+  <script src="utils/ql_read_md.js"></script>
+  
   <script>    
-   loadServerFile('README.md')
+   qlReadServerFile('README.md')
   </script>
 </body>
 </html>
+
 
 
 
