--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 <body>
   <h2>Server File Viewer</h2>
   
-  <div id="markdownOut">Click the button to load content...</div>
+  <div id="markdownOut">MD load content...</div>
 
   <script src="utils/ql_read_md.js">
-    qlReadServerFile('https://github.com/qiangliu-sd/enforcedDynaPyTkValid/blob/main/README.md')
+    qlReadServerFile('README.md')
   </script>
   
   <!-- script>     qlReadServerFile('README.md') </script -->
 </body>
 </html>
+
 
 
 
