--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
   <div id="markdownOut">MD load content...</div>
 
   <script src="utils/ql_read_md.js">
-    qlReadServerFile('README.md')
+    // load js function: qlReadServerFile
+  </script>  
+  <script> 
+    qlReadServerFile('README.md') 
   </script>
-  
-  <!-- script>     qlReadServerFile('README.md') </script -->
 </body>
 </html>
+
 
 
 
