--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body { font-family: Arial, sans-serif; padding: 20px; }
     #output { white-space: pre-wrap; background: #f4f4f4; padding: 10px; border: 1px solid #ccc; }
   </style>  
-     <script src="utils/marked.min.js.download"></script>
+     <script src="utils/marked.min.js"></script>
 </head>
 <body>
   <h2>Server File Viewer</h2>
@@ -22,6 +22,7 @@
   </script>
 </body>
 </html>
+
 
 
 
