--- a/md-tmpl.html
+++ b/md-tmpl.html
@@ -29,7 +29,7 @@
     // load js function: qlReadServerFile
   </script>  
   <script> 
-    qlReadServerFile('README.md') 
+    qlReadServerFile('https://github.com/qiangliu-sd/enforcedDynaPyTkValid/blob/main/README.md') 
   </script>
   
   
