--- a/qcopilot.html
+++ b/qcopilot.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <h1>Markdown Viewer</h1>
-  <div id="output">Click the button to load and render Markdown.</div>
+  <div id="output">Markdown will show here</div>
 
   <script>
     async function fetchMarkdown(url) {
@@ -65,4 +65,5 @@
   </script>
 </body>
 </html>
+
 
