--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" media="all" href="utils/xoops_cnd.css">
+	<link rel="stylesheet" type="text/css" media="all" href="utils/ql_index.css">
 	<style type="text/css" media="all"></style>
 </head>
 
