--- a/index.html
+++ b/index.html
@@ -6,55 +6,55 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 	<link rel="stylesheet" type="text/css" media="all" href="utils/ql_gemini.css">
-    <style>  </style>
 </head>
 <body>
     <table width="100%" cellpadding="0" cellspacing="0">
-    <tbody><tr><td align="center"><b>Dr. Liu's Page</b></td></tr></tbody></table>
+    <tbody><tr><td align="center"><b>Dr. Liu's Webpage</b></td></tr></tbody></table>
     <div class="container">
         <div class="column">
             <h2 class="section-title">On Coding</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="Bulletproof enforced validating of Entry widgets;  
-Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank" rel="">Enforced Tkinter-validating with JSON</a></li>
+Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
             </ul>
             <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Python-calls-C-Linux" title="Call Linux shared-object C (foreign) functions directly via ctypes inside Python: 
-A complete template" target="_blank" rel="">Python directly calls C functions (Linux)</a></li>
+A complete template" target="_blank">Python directly calls C functions (Linux)</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Python-calls-C-dll" title="Call Windows C-dll (foreign) functions directly via ctypes inside Python: 
-A complete template" target="_blank" rel="">Python directly calls C functions</a></li>
+A complete template" target="_blank">Python directly calls C functions</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Java-calls-C-dll" title="Call Windows C-dll (foreign) functions in Java: 
-A complete template" target="_blank" rel="">Java directly calls C functions</a></li>
+A complete template" target="_blank">Java directly calls C functions</a></li>
                 <li><a href="https://github.com/qiangliu-sd/CSharp-calls-C-dll" title="Call Windows C-dll (foreign) functions in C#: 
-A complete template" target="_blank" rel="">C# directly calls C functions</a></li>
+A complete template" target="_blank">C# directly calls C functions</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
-A full example" target="_blank" rel="">Use C++ to code Py-method for Python</a></li>
+A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
             <h2 class="section-title">经济</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/stablecoin.md" title="稳定币并非法定货币，风险很大" target="_blank" rel="">法（定货）币、加密代币与稳定代币</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank" rel="">国际清算银行:稳定币与货币相差甚远</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/stablecoin.md" title="稳定币并非法定货币，风险很大" target="_blank">法（定货）币、加密代币与稳定代币</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币与货币相差甚远</a></li>
             </ul>
         </div>
         <div class="column">
             <h2 class="section-title">My FREE Tools for You</h2>
             <h3 class="subsection-title">Dev Helpers</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank" rel="">Test web pages on your own Windows</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test web pages on your own Windows</a></li>
+                <li><a href="markdownView.html" title="An extremely simple markdown tool" target="_blank">View your markdown file in a browser [Click & bookmark]</a></li>
             </ul>
             <h3 class="subsection-title">Office Helpers</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="Order files by dragging files up or down vertically;  
-Remove a file by double-click" target="_blank" rel="">Merge docx and/or pdf files into one pdf</a></li>
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across web" target="_blank" rel="">Share your folder via a web-browser</a></li>
+Remove a file by double-click" target="_blank">Merge docx and/or pdf files into one pdf</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across web" target="_blank">Share your folder via a web-browser</a></li>
             </ul>
             <h3 class="subsection-title">FUN Utilities</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank" rel="">Take a long screenshot of a multiple-page webpage</a></li>
-                <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank" rel="">Convert Gregorian date to/from Chinese lunar date</a></li>
+                <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank">Take a long screenshot of a multiple-page webpage</a></li>
+                <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank">Convert Gregorian date to/from Chinese lunar date</a></li>
             </ul>
             <h3 class="subsection-title">Rocket Finance</h3>
             <ul class="link-list">
@@ -63,7 +63,7 @@ Remove a file by double-click" target="_blank" rel="">Merge docx and/or pdf file
 3. Suitable for US or China market;  
 4. Output price, delta, and gamma at once;  
 5. Compute implied volatility;  
-6. Include or exclude CB clauses (i.e., choices) easily" target="_blank" rel="">A high-performance (C++) CB pricing tool</a></li>
+6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">A high-performance (C++) CB pricing tool</a></li>
             </ul>
         </div>
     </div></body></html>
