--- a/ql_md_template.html
+++ b/ql_md_template.html
@@ -4,17 +4,16 @@
 	<title>QLiu Html Template for Markdown</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- base href="http://localhost:8427/" target="_blank">
-	<!-- UN-Comment for Github web server>
+	<!-- base href="http://localhost:8000/" target="_blank">
 	<base href="https://qiangliu-sd.github.io" target="_blank" -->
 	
   <script src="utils/marked.min.js"></script>
   <script src="utils/ql_import_md.js"></script>
-  <link rel="stylesheet" type="text/css" media="all" href="utils/ql_markdown.css">
+  <link rel="stylesheet" type="text/css" media="all" href="utils/ql_md_copilot.css">
 </head>
 
 <body>
-  <div id="readFun">***** Reading FUN *****</div>
+  <div style="text-align: center;">***** Reading FUN *****</div>
   <div id="markdownOut"></div>
 
   <script>
