--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h2 class="section-title">On Coding</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="Bulletproof enforced validating of Entry widgets;  
-Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
+                <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
+2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
             </ul>
             <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
             <ul class="link-list">
@@ -42,14 +42,15 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             <h2 class="section-title">My FREE Tools for You</h2>
             <h3 class="subsection-title">Dev Helpers</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test web pages on your own Windows</a></li>
-                <li><a href="markdownView.html" title="An extremely simple markdown tool" target="_blank">View your markdown file in a browser [Click & bookmark]</a></li>
+                <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">Edit markdown files in a browser [Click & <b>bookmark</b>]</a></li>
+                <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">View markdown files via a browser [Click & <b>bookmark</b>]</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test <b>html</b> files on your own Windows PC</a></li>
             </ul>
             <h3 class="subsection-title">Office Helpers</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="Order files by dragging files up or down vertically;  
-Remove a file by double-click" target="_blank">Merge docx and/or pdf files into one pdf</a></li>
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across web" target="_blank">Share your folder via a web-browser</a></li>
+                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically;  
+2. Remove a file by double-click" target="_blank">Merge docx and/or pdf files into one pdf</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">Share your <b>folder</b> on LAN via a browser</a></li>
             </ul>
             <h3 class="subsection-title">FUN Utilities</h3>
             <ul class="link-list">
