--- a/markdownView.html
+++ b/markdownView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- by COPILOT, an extremely simple tool -->
+	<!-- by COPILOT & QLiu, an extremely simple tool -->
   <title>QLiu:: Markdown Viewer</title>
   <meta charset="UTF-8">
   <script src="utils/marked.min.js"></script>
@@ -10,7 +10,7 @@
 </style>
 </head>
 <body>
-  <h1>📄 QLiu Markdown Viewer</h1>
+  <h3>QLiu Markdown📄 Viewer</h3>
   <input type="file" id="fileMd" accept=".md,.txt" />
   <div id="markdownOut">Markdown file to render here.</div>
 
