--- a/index_chn.html
+++ b/index_chn.html
@@ -9,25 +9,25 @@
 </head>
 <body>
     <table width="100%" cellpadding="0" cellspacing="0">
-<tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Webpage</b></td><td align="right"><a href="index_chn.html">中文版</a></td></tr></tbody></table><div class="container">        <div class="column">
-            <h2 class="section-title">On Coding</h2>
+<tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Webpage</b></td><td align="right"><a href="index.html">English version</a></td></tr></tbody></table><div class="container">        <div class="column">
+            <h2 class="section-title">编程</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
-2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
+2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">基于JSON的Tkinter界面输入的强制校验</a></li>
             </ul>
-            <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
+            <h3 class="subsection-title">C/C++与Python, Java, C#</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Python-calls-C-Linux" title="Call Linux shared-object C (foreign) functions directly via ctypes inside Python: 
-A complete template" target="_blank">Python directly calls C functions (Linux)</a></li>
+A complete template" target="_blank">在Python中直接调用C函数(Linux)</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Python-calls-C-dll" title="Call Windows C-dll (foreign) functions directly via ctypes inside Python: 
-A complete template" target="_blank">Python directly calls C functions</a></li>
+A complete template" target="_blank">在Python中直接调用C函数</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Java-calls-C-dll" title="Call Windows C-dll (foreign) functions in Java: 
-A complete template" target="_blank">Java directly calls C functions</a></li>
+A complete template" target="_blank">在Java中直接调用C函数</a></li>
                 <li><a href="https://github.com/qiangliu-sd/CSharp-calls-C-dll" title="Call Windows C-dll (foreign) functions in C#: 
-A complete template" target="_blank">C# directly calls C functions</a></li>
+A complete template" target="_blank">在C#中直接调用C函数</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
-A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
+A full example" target="_blank">用C++编写Python函数</a></li>
             </ul>
             <h2 class="section-title">经济</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
@@ -38,32 +38,32 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
         </div>
         <div class="column">
-            <h2 class="section-title">My FREE Tools for You</h2>
-            <h3 class="subsection-title">Dev Helpers</h3>
+            <h2 class="section-title">我编写的免费小工具</h2>
+            <h3 class="subsection-title">编程类</h3>
             <ul class="link-list">
-                <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">Edit markdown files in a browser [Click & <b>bookmark</b>]</a></li>
-                <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">View markdown files via a browser [Click & <b>bookmark</b>]</a></li>
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test <b>html</b> files on your own Windows PC</a></li>
+                <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">在浏览器里编辑markdown文件[点击<b>收藏</b>]</a></li>
+                <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">在浏览器里查看markdown文件[点击<b>收藏</b>]</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">在自家的Windows电脑上测试<b>网页</b></a></li>
             </ul>
-            <h3 class="subsection-title">Office Helpers</h3>
+            <h3 class="subsection-title">办公类</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically;  
-2. Remove a file by double-click" target="_blank">Merge docx and/or pdf files into one pdf</a></li>
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">Share your <b>folder</b> on LAN via a browser</a></li>
+2. Remove a file by double-click" target="_blank">将docx文件、pdf文件合并为pdf</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">通过浏览器共享局域网上的<b>文件夹</b></a></li>
             </ul>
-            <h3 class="subsection-title">FUN Utilities</h3>
+            <h3 class="subsection-title">有趣类</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank">Take a long screenshot of a multiple-page webpage</a></li>
-                <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank">Convert Gregorian date to/from Chinese lunar date</a></li>
+                <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank">保存特长网页为图片</a></li>
+                <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank">公历、农历转换器</a></li>
             </ul>
-            <h3 class="subsection-title">Rocket Finance</h3>
+            <h3 class="subsection-title">火箭科学家搞金融</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put;  
 2. Finite difference solving the BSM or AFV PDE;  
 3. Suitable for US or China market;  
 4. Output price, delta, and gamma at once;  
 5. Compute implied volatility;  
-6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">A high-performance (C++) CB pricing tool</a></li>
+6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">可转换债券C++高效定价系统</a></li>
             </ul>
         </div>
     </div></body></html>
