--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@ A complete template" target="_blank">C# directly calls C functions</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
 A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
+            <h3 class="subsection-title">Programming Languages</h3>
+            <ul class="link-list">
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">Python parallel entanglement: A C++ solution</a></li>
+            </ul>
             <h2 class="section-title">经济</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
             <ul class="link-list">
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/stablecoin.md" title="稳定币并非法定货币，风险很大" target="_blank">法（定货）币、加密代币与稳定代币</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank">诺奖得主克鲁格曼:数字腐败占领华盛顿</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank">诺奖得主克鲁格曼:华盛顿的数字腐败</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank">诺奖得主梯若尔:加密币是纯泡沫</a></li>
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币与货币相差甚远</a></li>
             </ul>
         </div>
