--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h2 class="section-title">On Coding</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">AI agents with LangGraph: A working example</a></li>
                 <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
             </ul>
@@ -29,12 +30,16 @@ A complete template" target="_blank">C# directly calls C functions</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
 A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
-            <h3 class="subsection-title">Programming Languages</h3>
+            <h3 class="subsection-title">On Prog-Languages</h3>
             <ul class="link-list">
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">Python parallel entanglement: A C++ solution</a></li>
             </ul>
-            <h2 class="section-title">经济</h2>
+            <h3 class="subsection-title">Know-How</h3>
+            <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows 11: A working guide</a></li>
+            </ul>
+            <h2 class="section-title">经济谈</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
             <ul class="link-list">
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/stablecoin.md" title="稳定币并非法定货币，风险很大" target="_blank">法（定货）币、加密代币与稳定代币</a></li>
@@ -44,20 +49,20 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
         </div>
         <div class="column">
-            <h2 class="section-title">My FREE Tools for You</h2>
-            <h3 class="subsection-title">Dev Helpers</h3>
+            <h2 class="section-title">My FREE Apps for You</h2>
+            <h3 class="subsection-title">Dev Apps</h3>
             <ul class="link-list">
                 <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">Edit markdown files in a browser [Click & <b>bookmark</b>]</a></li>
                 <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">View markdown files via a browser [Click & <b>bookmark</b>]</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test <b>html</b> files on your own Windows PC</a></li>
             </ul>
-            <h3 class="subsection-title">Office Helpers</h3>
+            <h3 class="subsection-title">Office Apps</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically;  
 2. Remove a file by double-click" target="_blank">Merge docx and/or pdf files into one pdf</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">Share your <b>folder</b> on LAN via a browser</a></li>
             </ul>
-            <h3 class="subsection-title">FUN Utilities</h3>
+            <h3 class="subsection-title">FUN Apps</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank">Take a long screenshot of a multiple-page webpage</a></li>
                 <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank">Convert Gregorian date to/from Chinese lunar date</a></li>
