--- a/index_chn.html
+++ b/index_chn.html
@@ -13,6 +13,7 @@
             <h2 class="section-title">编程</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">基于LangGraph的智能体:可运行实例</a></li>
                 <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">基于JSON的Tkinter界面之输入强制校验</a></li>
             </ul>
@@ -34,7 +35,11 @@ A full example" target="_blank">用C++编写Python函数</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Python能比C++更快吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠减慢的C++方案</a></li>
             </ul>
-            <h2 class="section-title">经济</h2>
+            <h3 class="subsection-title">技巧</h3>
+            <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Windows11文件自签名逐步指南</a></li>
+            </ul>
+            <h2 class="section-title">经济谈</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
             <ul class="link-list">
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/stablecoin.md" title="稳定币并非法定货币，风险很大" target="_blank">法（定货）币、加密代币与稳定代币</a></li>
@@ -45,31 +50,31 @@ A full example" target="_blank">用C++编写Python函数</a></li>
         </div>
         <div class="column">
             <h2 class="section-title">我贡献的免费小法宝</h2>
-            <h3 class="subsection-title">编程类</h3>
+            <h3 class="subsection-title">编程Apps</h3>
             <ul class="link-list">
                 <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">在浏览器里编辑markdown文件[点击<b>收藏</b>]</a></li>
                 <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">在浏览器里查看markdown文件[点击<b>收藏</b>]</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">在自家的Windows电脑上测试<b>网页</b></a></li>
             </ul>
-            <h3 class="subsection-title">办公类</h3>
+            <h3 class="subsection-title">办公Apps</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically;  
 2. Remove a file by double-click" target="_blank">将docx文件、pdf文件合并为pdf</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">通过浏览器共享局域网上的<b>文件夹</b></a></li>
             </ul>
-            <h3 class="subsection-title">有趣类</h3>
+            <h3 class="subsection-title">趣味Apps</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank">保存特长网页为图片</a></li>
                 <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank">公历、农历转换器</a></li>
             </ul>
-            <h3 class="subsection-title">火箭科学家搞金融</h3>
+            <h3 class="subsection-title">火箭科学家之金融</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put;  
 2. Finite difference solving the BSM or AFV PDE;  
 3. Suitable for US or China market;  
 4. Output price, delta, and gamma at once;  
 5. Compute implied volatility;  
-6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">可转换债券C++高效定价引擎</a></li>
+6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">可转换债券C++高效定价系统</a></li>
             </ul>
         </div>
     </div></body></html>
