--- a/index_chn.html
+++ b/index_chn.html
@@ -32,6 +32,7 @@ A full example" target="_blank">用C++编写Python函数</a></li>
             </ul>
             <h3 class="subsection-title">程序语言比较</h3>
             <ul class="link-list">
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools are called an AI agent" target="_blank">智能体与传统App:简单对比</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Python能比C++更快吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠减慢的C++方案</a></li>
             </ul>
